JSAI/error/src/test/resources/base/notjslibrary_a010.js

var i = -5.34 >>> 1;
print(i);
i;

